ACTIN-1099 Fix issues and tests